feat:先增加dependencies成员变量